--- a/G9-LITHIUM-MATEONG/sample.html
+++ b/G9-LITHIUM-MATEONG/sample.html
@@ -11,7 +11,22 @@
               <link rel="icon" href="ion.png" type="image/gif">
         </head>
         <body>
-                isang ballpen, dalawang binder, isang papel, at isang matangkad na pogi at may emotional intelligence tapos academic achivier na soft spoken :>
+                 <strong> This text is also bold. </strong>
+			   <b> this text is bold </b>
+			   <em> This text is Italic. </em>
+			   <i> This text is also in italic </i>
+
+               <p> This part is in <b>bold</b>. This part is in <i>italic </i></p>
+			   <p> This part is both in <b><i>bold and italic. </i></b></p>
+			   
+			   <u> This text is underlined.</u>
+			   <del> This text is striked through. </del>
+                        <div> This is a div. </div>
+			   <br>
+			   <div> This is another div </div>
+                <div> This is a div. </div>
+			   <hr>
+			   <div> This is another div </div>
 
                 
         </body>
